Prevent .btn from not-wrapping

--- a/app/assets/stylesheets/scaffolds.css.scss
+++ b/app/assets/stylesheets/scaffolds.css.scss
@@ -23,6 +23,10 @@
   font-size: 18px;
 }
 
+.btn {
+  white-space: normal !important;
+}
+
 /* body {
   background-color: #fff;
   color: #333;
